@@ -127,7 +127,7 @@ public class RangeAssignor extends AbstractPartitionAssignor {
         List<TopicAssignmentState> topicAssignmentStates = partitionsPerTopic.entrySet().stream()
                 .filter(e -> !e.getValue().isEmpty())
                 .map(e -> new TopicAssignmentState(e.getKey(), e.getValue(), consumersPerTopic.get(e.getKey()), consumerRacks))
-                .collect(Collectors.toList());
+                .toList();
 
         Map<String, List<TopicPartition>> assignment = new HashMap<>();
         subscriptions.keySet().forEach(memberId -> assignment.put(memberId, new ArrayList<>()));
@@ -159,7 +159,7 @@ public class RangeAssignor extends AbstractPartitionAssignor {
             List<TopicPartition> assignablePartitions = assignmentState.unassignedPartitions.stream()
                     .filter(tp -> mayAssign.apply(consumer, tp))
                     .limit(assignmentState.maxAssignable(consumer))
-                    .collect(Collectors.toList());
+                    .toList();
             if (assignablePartitions.isEmpty())
                 continue;
 
@@ -175,7 +175,7 @@ public class RangeAssignor extends AbstractPartitionAssignor {
                 if (coPartitionedStates.size() > 1)
                     assignCoPartitionedWithRackMatching(consumers, numPartitions, coPartitionedStates, assignment);
                 else {
-                    TopicAssignmentState state = coPartitionedStates.get(0);
+                    TopicAssignmentState state = coPartitionedStates.getFirst();
                     if (state.needsRackAwareAssignment)
                         assignRanges(state, state::racksMatch, assignment);
                 }
@@ -281,7 +281,7 @@ public class RangeAssignor extends AbstractPartitionAssignor {
             int numAssigned = numAssignedByConsumer.compute(consumer, (c, n) -> n + newlyAssignedPartitions.size());
             if (numAssigned > numPartitionsPerConsumer)
                 remainingConsumersWithExtraPartition--;
-            unassignedPartitions.removeAll(newlyAssignedPartitions);
+            newlyAssignedPartitions.forEach(unassignedPartitions::remove);
         }
 
         @Override
